# Connect-4

./: CMakeLists.txt  README.md  connect4.cpp
include/: connect4.h
src/: connect4.cpp  main.cpp
